# ankountant

./: .cursorignore  .cursorindexingignore  .dprint.json  .gitignore  .mypy.ini  .ruff.toml  CLAUDE.md  CONTEXT.md  CONTRIBUTORS  Cargo.toml  INSTALL.md  README.md  justfile  run
.agentic-loop/: BUILD_NOTES.md  contract.md  feature_list.json  launch.workflow.js  log.md  progress.md
docs/: architecture.md  build.md  contributing.md  development.md  e2e-testing.md  editing.md  language_bridge.md  linux.md  ninja.md  protobuf.md  testing-coverage.md
docs_ankountant/: IMPLEMENTATION-PROMPT.md  PRD-tbs-shapes-future.md  PRD.md  Speedrun_ A Desktop + Mobile Study App Built on Anki.md  accent-preview.html  (+7 more)
ios/anki-bridge-rs/: Cargo.toml
ios/anki-bridge-rs/src/: lib.rs
tools/cardgen/: .env.example  .gitignore  pyproject.toml
tools/cardgen/cardgen/: __init__.py  baseline.py  chunk.py  cli.py  config.py  dedup.py  emit.py  generate.py  gold.py  index.py  ingest.py  judge.py  leakage.py  models.py  reports.py  retrieve.py  selfcheck.py  taxonomy.py  templates.py  util.py  worklist.py
tools/cardgen/cardgen/providers/: __init__.py  base.py  cursor_judge.py  offline.py  openai_batch.py  openai_embed.py  openai_generate.py
tools/cardgen/gold/: gold.FAR.jsonl
tools/cardgen/scripts/: emit_online.py  fetch_ankiweb.mjs  fetch_corpus.py  harvest_online.py  harvest_templates.py  package.json  stress_bank.py  triage_online.py
tools/cardgen/taxonomy/: confusion_catalog.AUD.yaml  confusion_catalog.BAR.yaml  confusion_catalog.FAR.yaml  confusion_catalog.ISC.yaml  confusion_catalog.REG.yaml  confusion_catalog.TCP.yaml  taxonomy.AUD.yaml  taxonomy.BAR.yaml  taxonomy.FAR.yaml  taxonomy.ISC.yaml  taxonomy.REG.yaml  taxonomy.TCP.yaml
tools/cardgen/templates/: auc_research.yaml  citation_research.yaml  irs_cloze_recall.yaml  nist_control_research.yaml  tax_phaseout_mcq.yaml  tax_threshold_recall.yaml
tools/cardgen/tests/: test_ai_requirements.py  test_chunk_filter.py  test_emit.py  test_eval.py  test_gate.py  test_ingest_index.py  test_retrieve_generate.py  test_scale.py  test_stress_bank.py  test_templates.py  test_worklist.py
(+725 files in other folders)
