[project]
name = "cardgen"
version = "0.1.0"
description = "Ankountant Phase-2a build-time RAG card generator (offline batch tool)"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "lancedb",
    "pyarrow",
    "numpy",
    "pyyaml",
    "python-dotenv",
    "genanki",
    "pymupdf",
    "tiktoken",
    "tenacity",
]

[project.optional-dependencies]
eval = ["ragas", "datasets"]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cardgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
